--- a/source/code/vue/04.html
+++ b/source/code/vue/04.html
@@ -5,7 +5,8 @@
     <script type="text/javascript" src="./lib/vue.js"></script>
 </head>
 <body>
-<div id="vue" v-bind:['title' + Name]="titleValue"></div>
+<div id="vue" v-bind:[
+'title' + Name]="titleValue"></div>
 
 <script type="text/javascript">
     let vue = new Vue({
