--- a/source/code/vue/11.html
+++ b/source/code/vue/11.html
@@ -7,11 +7,15 @@
 <body>
 <style type="text/css">
     .content {
-        font-size: 14px;color: #2f2f2f;line-height: 1.5;padding: 10px;
+        font-size: 14px;
+        color: #2f2f2f;
+        line-height: 1.5;
+        padding: 10px;
     }
 
     .gap {
-        height: 2px; background-color: #eee;
+        height: 2px;
+        background-color: #eee;
     }
 </style>
 <div id="vue">
