--- a/source/code/vue/25.html
+++ b/source/code/vue/25.html
@@ -13,10 +13,9 @@
 <script type="text/javascript">
     let vue = new Vue({
         el: '#vue',
-        data: {
-        },
+        data: {},
         methods: {
-            move(event){
+            move(event) {
                 event.preventDefault();
                 console.log(event);
             }
