--- a/source/code/vue/31.html
+++ b/source/code/vue/31.html
@@ -14,10 +14,9 @@
 <script type="text/javascript">
     let vue = new Vue({
         el: '#vue',
-        data: {
-        },
+        data: {},
         methods: {
-            keypress(event){
+            keypress(event) {
                 console.log(event.key);
             }
         }
