--- a/source/code/zepto/deferred/2.html
+++ b/source/code/zepto/deferred/2.html
@@ -13,12 +13,12 @@
 
         let counter = 1;
         let timer = setInterval(function () {
-            if(counter > n) {
-                deferred.resolve("success task: " + taskId, {data: [1,2,3]});
+            if (counter > n) {
+                deferred.resolve("success task: " + taskId, {data: [1, 2, 3]});
                 return clearInterval(timer);
             }
 
-            if(counter == (n - 1) && (Math.random() * 10 > 7)) {
+            if (counter == (n - 1) && (Math.random() * 10 > 7)) {
                 deferred.reject("fail task: " + taskId, new Error('random number gt 7'));
                 return clearInterval(timer);
             }
@@ -33,26 +33,26 @@
     let deferred = createAsyncTask('1', 3);
 
     deferred
-        //这里添加的回调会在deferred状态变化时才会调用
-        .then(function fnDone(state, data){
+    //这里添加的回调会在deferred状态变化时才会调用
+        .then(function fnDone(state, data) {
             console.log(state, data);
             //此处返回一个新的异步任务
             return createAsyncTask('2', 4);
-        }, function fnFail(state, error){
+        }, function fnFail(state, error) {
             console.error(state, error);
         })
         //这里添加的回调会在上一个then的fnDone内返回的异步任务状态变化时才会调用
-        .then(function fnDone(state, data){
+        .then(function fnDone(state, data) {
             console.log(state, data);
             //此处返回一个新的异步任务
             return createAsyncTask('3', 4);
-        }, function fnFail(state, error){
+        }, function fnFail(state, error) {
             console.error(state, error);
         })
         //这里添加的回调会在上一个then的fnDone内返回的异步任务状态变化时才会调用
-        .then(function fnDone(state, data){
+        .then(function fnDone(state, data) {
             console.log(state, data);
-        }, function fnFail(state, error){
+        }, function fnFail(state, error) {
             console.error(state, error);
         });
 
