--- a/source/code/vue/23.html
+++ b/source/code/vue/23.html
@@ -17,8 +17,7 @@
 <script type="text/javascript">
     let vue = new Vue({
         el: '#vue',
-        data: {
-        }
+        data: {}
     });
 </script>
 </body>
