--- a/source/code/zepto/callback/1.html
+++ b/source/code/zepto/callback/1.html
@@ -7,14 +7,13 @@
 </head>
 <body>
 <script type="text/javascript">
-    let foo = (msg)=>{
+    let foo = (msg) => {
         console.log('foo says: ' + msg);
     };
-    let bar = (msg)=>{
+    let bar = (msg) => {
         console.log('bar says: ' + msg);
     };
-    let callbacks = $.Callbacks({
-    });
+    let callbacks = $.Callbacks({});
 
     callbacks.add(foo);
     callbacks.fire('bingo');
